WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
135108
[iOS] a Paused media session is not active
https://bugs.webkit.org/show_bug.cgi?id=135108
Summary
[iOS] a Paused media session is not active
Eric Carlson
Reported
2014-07-20 19:43:14 PDT
MediaSessionManager::hasActive should not return true for a session in the Paused state, we should only activate the AudioSession for Playing sessions.
Attachments
Proposed patch
(1.53 KB, patch)
2014-07-20 19:57 PDT
,
Eric Carlson
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2014-07-20 19:43:48 PDT
<
rdar://problem/17188368
>
Eric Carlson
Comment 2
2014-07-20 19:57:56 PDT
Created
attachment 235200
[details]
Proposed patch
Darin Adler
Comment 3
2014-07-20 20:40:07 PDT
With no regression test, we’re a little vulnerable here. Might be nice to have a brief comment explaining why this function does exactly what it does.
Eric Carlson
Comment 4
2014-07-21 08:05:29 PDT
(In reply to
comment #3
)
> With no regression test, we’re a little vulnerable here. Might be nice to have a brief comment explaining why this function does exactly what it does.
Good point. I renamed MediaSessionManager::hasActive to "activeAudioSessionRequired" to make obvious what the method does.
Eric Carlson
Comment 5
2014-07-21 08:06:19 PDT
Committed
r171299
-
https://trac.webkit.org/r171299
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug